feat: add README, JavaDocs, update swagger and validations